--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "private": true,
   "homepage": "http://MikhailKey.github.io/alt-weather",
   "dependencies": {
+    "@apollo/client": "^3.2.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-rest": "^0.7.3",
     "axios": "^0.20.0",
     "dayjs": "^1.8.35",
+    "graphql": "^15.3.0",
+    "graphql-anywhere": "^4.2.7",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "simplebar-react": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
